--- a/gui/drug.htm
+++ b/gui/drug.htm
@@ -1,21 +1,21 @@
-<script type="text/javascript" src="{{@SR}}/public/javascripts/facebox.js"></script>
+<script type="text/javascript" src="{{@SR}}/assets/javascripts/facebox.js"></script>
 <script type="text/javascript">
   jQuery(document).ready(function($) {
     $('a[rel*=facebox]').facebox({
-    loadingImage : '{{@SR}}/public/images/loading.gif',
-    closeImage   : '{{@SR}}/public/images/closelabel.png'
+    loadingImage : '{{@SR}}/assets/images/loading.gif',
+    closeImage   : '{{@SR}}/assets/images/closelabel.png'
     });
     vtip();
   })
 </script> 
 
 <!-- tooltip »vtip -->
-<script type="text/javascript" src="{{@SR}}/public/javascripts/vtip.js"></script> 
+<script type="text/javascript" src="{{@SR}}/assets/javascripts/vtip.js"></script> 
 <!-- ilaç seçimi -->
-<script type="text/javascript" src="{{@SR}}/public/javascripts/jquery.tokeninput.js"></script>
+<script type="text/javascript" src="{{@SR}}/assets/javascripts/jquery.tokeninput.js"></script>
 <!-- end ilaç seçimi -->
 
-<h2>İlaç Etkileşimi</h2>
+<h2>İlaç İçerikleri</h2>
 ilaç seçiminizi buradan yapabilirsiniz:
 
 <div class="tokeninput" style="margin-left:250px">
